--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-maps": "1.18.0"
+    "react-native": "0.76.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
